--- a/oracle/Cargo.toml
+++ b/oracle/Cargo.toml
@@ -14,6 +14,12 @@ frame-system = { git = "https://github.com/paritytech/substrate", branch = "polk
 
 orml-traits = { path = "../traits", default-features = false }
 
+[dev-dependencies]
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
+pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
+
 [features]
 default = ["std"]
 std = [
