--- a/redkite/Cargo.toml
+++ b/redkite/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.0.1"
 authors = ["Hai Duong<hai.duong@icetea.io>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 # alias "parity-scale-code" to "codec"
 [dependencies.codec]
 default-features = false
@@ -23,8 +21,11 @@ sp-io = { default-features = false, git = 'https://github.com/paritytech/substra
 sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
-pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
+pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
+pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
+
+[dev-dependencies]
+pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 
 [features]
 default = ['std']
@@ -37,5 +38,6 @@ std = [
     'sp-core/std',
     'sp-io/std',
     'sp-runtime/std',
-    'sp-std/std'
+    'sp-std/std',
+    'pallet-timestamp/std',
 ]
