--- a/redkite/Cargo.toml
+++ b/redkite/Cargo.toml
@@ -23,9 +23,11 @@ sp-std = { default-features = false, git = 'https://github.com/paritytech/substr
 
 pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
 pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
+orml-traits = { default-features = false, path = "../traits" }
 
 [dev-dependencies]
 pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
+orml-tokens = { package = "orml-tokens", path = "../tokens" }
 
 [features]
 default = ['std']
@@ -40,4 +42,5 @@ std = [
     'sp-runtime/std',
     'sp-std/std',
     'pallet-timestamp/std',
+    'orml-traits/std',
 ]
